Change past event button color automatically

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1,5 +1,6 @@
 // VARIABLES
 $color-secondary: #6c757d;
+
 // MIXINS
 
 // Media Query Shorthand mixin taken from:
@@ -52,7 +53,18 @@ $screen-lg:                  1200px !default;
   .event-register {
     display: none;
   }
+  .card-link {
+    color: #fff;
+    background-color: #6c757d;
+    border-color: #6c757d;
+    &:hover {
+      color: #fff;
+      background-color: #5a6268;
+      border-color: #545b62;
+    }
+  }
 }
+
 .card {
   a {
     &:hover {
