--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -21,6 +21,15 @@
 .event-list-past .event-register {
   display: none; }
 
+.event-list-past .card-link {
+  color: #fff;
+  background-color: #6c757d;
+  border-color: #6c757d; }
+  .event-list-past .card-link:hover {
+    color: #fff;
+    background-color: #5a6268;
+    border-color: #545b62; }
+
 .card a:hover {
   text-decoration: none; }
 
