--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -35,6 +35,10 @@ $screen-lg:                  1200px !default;
   background-size: cover;
 }
 
+.events {
+  background-color: #f3f3f3;
+}
+
 .footer {
   background-color: $color-secondary;
   color: #fff;
